# kinogate

./: README.md  metadata.json
kinogate/: Cargo.toml
kinogate/src/: lib.rs
pkg/: manifest.json
ui/: index.html  main.js  package-lock.json  package.json  vite.config.js
