[package]
name = "kinogate"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "3232423" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
alloy-sol-types = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
